added cov to ci

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,3 +23,12 @@ jobs:
       
       - name: Run tests
         run: npm test
+
+      - name: Run tests with coverage
+        run: npm test -- --coverage
+
+
+      - name: Show coverage
+        run: |
+            cat ./coverage/lcov.info | npx coveralls
+            echo "Coverage report generated!"
