--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,9 +21,10 @@ jobs:
       - name: Install dependencies
         run: npm install
       
-      - name: Run tests
-        run: npm test
+    #   - name: Run tests
+    #     run: npm test
 
       - name: Run tests with coverage
-        run: npm test -- --coverage
+    #   # Блокировка при ошибке
+        run: npm test -- --coverage || (echo "Tests failed!" && exit 1)
 
